; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_wc/extr_update_editor.c_do_notification.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_wc/extr_update_editor.c_do_notification.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.edit_baton = type { i32, i32 (i32, %struct.TYPE_4__*, i32*)* }
%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.edit_baton*, i8*, i32, i32, i32*)* @do_notification to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @do_notification(%struct.edit_baton* %0, i8* %1, i32 %2, i32 %3, i32* %4) #0 {
  %6 = alloca %struct.edit_baton*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca %struct.TYPE_4__*, align 8
  store %struct.edit_baton* %0, %struct.edit_baton** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32* %4, i32** %10, align 8
  %12 = load %struct.edit_baton*, %struct.edit_baton** %6, align 8
  %13 = getelementptr inbounds %struct.edit_baton, %struct.edit_baton* %12, i32 0, i32 1
  %14 = load i32 (i32, %struct.TYPE_4__*, i32*)*, i32 (i32, %struct.TYPE_4__*, i32*)** %13, align 8
  %15 = icmp eq i32 (i32, %struct.TYPE_4__*, i32*)* %14, null
  br i1 %15, label %16, label %17

16:                                               ; preds = %5
  br label %34

17:                                               ; preds = %5
  %18 = load i8*, i8** %7, align 8
  %19 = load i32, i32* %9, align 4
  %20 = load i32*, i32** %10, align 8
  %21 = call %struct.TYPE_4__* @svn_wc_create_notify(i8* %18, i32 %19, i32* %20)
  store %struct.TYPE_4__* %21, %struct.TYPE_4__** %11, align 8
  %22 = load i32, i32* %8, align 4
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 0
  store i32 %22, i32* %24, align 4
  %25 = load %struct.edit_baton*, %struct.edit_baton** %6, align 8
  %26 = getelementptr inbounds %struct.edit_baton, %struct.edit_baton* %25, i32 0, i32 1
  %27 = load i32 (i32, %struct.TYPE_4__*, i32*)*, i32 (i32, %struct.TYPE_4__*, i32*)** %26, align 8
  %28 = load %struct.edit_baton*, %struct.edit_baton** %6, align 8
  %29 = getelementptr inbounds %struct.edit_baton, %struct.edit_baton* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 8
  %31 = load %struct.TYPE_4__*, %struct.TYPE_4__** %11, align 8
  %32 = load i32*, i32** %10, align 8
  %33 = call i32 %27(i32 %30, %struct.TYPE_4__* %31, i32* %32)
  br label %34

34:                                               ; preds = %17, %16
  ret void
}

declare dso_local %struct.TYPE_4__* @svn_wc_create_notify(i8*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
